Updates to make them working (just project setup operations)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,13 +43,20 @@ add_executable(${PROJECT_NAME}
         ui/bottombar/BottomBar.cpp ui/bottombar/BottomBar.hpp ui/bottombar/BottomBar.ui
         ui/MainWindow.cpp ui/MainWindow.hpp ui/MainWindow.ui
 
-        ui/web/Web.cpp ui/web/Web.hpp ui/web/Web.ui
+        #ui/web/Web.cpp ui/web/Web.hpp ui/web/Web.ui
+
+        ui/web/Browser.cpp ui/web/Browser.hpp
+        ui/web/BrowserWindow.cpp ui/web/BrowserWindow.hpp
         ui/web/WebPage.cpp ui/web/WebPage.hpp
         ui/web/WebPopupWindow.cpp ui/web/WebPopupWindow.hpp
         ui/web/WebView.cpp ui/web/WebView.hpp
+        ui/web/TabWidget.cpp ui/web/TabWidget.hpp
+        ui/web/DownloadManagerWidget.cpp ui/web/DownloadManagerWidget.hpp ui/web/DownloadManagerWidget.ui
+        ui/web/DownloadWidget.cpp ui/web/DownloadWidget.hpp ui/web/DownloadWidget.ui
 
         resources.qrc
-
+        ui/web/Web.hpp
+        ui/web/Web.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
