Added default autopilot and anchor alarm applications

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -86,6 +86,10 @@
         "distance": "nm",
         "vesselSpeed": "kn",
         "windSpeed": "kn"
+    },
+    "applications": {
+        "autopilot": "@signalk/signalk-autopilot",
+        "anchor": "signalk-anchoralarm-plugin"
     }
 }
 
