Added MOB key/values

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -67,6 +67,9 @@
         "wpt": "navigation.course.nextPoint",
         "xte": "navigation.course.calcValues.crossTrackError",
         "rsa": "steering.rudderAngle",
+        "notifications.mob": "notifications.mob",
+        "mob.bearing": "mob.bearing",
+        "mob.distance": "mob.distance",
         "autopilot.state": "steering.autopilot.state",
         "autopilot.mode": "steering.autopilot.mode",
         "autopilot.target.heading": "steering.autopilot.target.headingMagnetic",
