Added range units (now meters and feet)

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -68,8 +68,9 @@
         "xte": "navigation.course.calcValues.crossTrackError",
         "rsa": "steering.rudderAngle",
         "notifications.mob": "notifications.mob",
-        "mob.bearing": "mob.bearing",
-        "mob.distance": "mob.distance",
+        "mob.startTime": "navigation.courseGreatCircle.activeRoute.startTime",
+        "mob.bearing": "navigation.course.calcValues.bearingTrue",
+        "mob.distance": "navigation.course.calcValues.distance",
         "autopilot.state": "steering.autopilot.state",
         "autopilot.mode": "steering.autopilot.mode",
         "autopilot.target.heading": "steering.autopilot.target.headingMagnetic",
@@ -85,6 +86,7 @@
         "waterTemperature": "C",
         "depth": "mt",
         "distance": "nm",
+        "range": "rm",
         "vesselSpeed": "kn",
         "windSpeed": "kn"
     },
