Added keys for alarms

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -67,7 +67,12 @@
         "wpt": "navigation.course.nextPoint",
         "xte": "navigation.course.calcValues.crossTrackError",
         "rsa": "steering.rudderAngle",
+        "notifications.abandon": "notifications.abandon",
+        "notifications.adrift": "notifications.adrift",
+        "notifications.fire": "notifications.fire",
         "notifications.mob": "notifications.mob",
+        "notifications.piracy": "notifications.piracy",
+        "notifications.sinking": "notifications.sinking",
         "mob.startTime": "navigation.courseGreatCircle.activeRoute.startTime",
         "mob.bearing": "navigation.course.calcValues.bearingTrue",
         "mob.distance": "navigation.course.calcValues.distance",
