Added keys for the anchoralarm plugin ToDo: add keys for chain counter and windlass controller

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -73,6 +73,11 @@
         "notifications.mob": "notifications.mob",
         "notifications.piracy": "notifications.piracy",
         "notifications.sinking": "notifications.sinking",
+        "anchor.actions.drop": "plugins.anchoralarm.dropAnchor",
+        "anchor.actions.raise": "plugins.anchoralarm.raiseAnchor",
+        "anchor.actions.radius": "plugins.anchoralarm.setRadius",
+        "anchor.actions.rode": "plugins.anchoralarm.setRodeLength",
+        "anchor.actions.params": "plugins.anchoralarm.setManualAnchor",
         "mob.startTime": "navigation.courseGreatCircle.activeRoute.startTime",
         "mob.bearing": "navigation.course.calcValues.bearingTrue",
         "mob.distance": "navigation.course.calcValues.distance",
