Added configuration for Anchor bar

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -73,11 +73,25 @@
         "notifications.mob": "notifications.mob",
         "notifications.piracy": "notifications.piracy",
         "notifications.sinking": "notifications.sinking",
+        "notifications.anchor": "notifications.anchor",
+        "anchor.bearing": "navigation.anchor.bearingTrue",
+        "anchor.radius": "navigation.anchor.currentRadius",
+        "anchor.distance": "navigation.anchor.distanceFromBow",
+        "anchor.fudge": "navigation.anchor.fudgeFactor",
+        "anchor.max": "navigation.anchor.maxRadius",
+        "anchor.meta": "navigation.anchor.meta",
+        "anchor.position": "navigation.anchor.position",
+        "anchor.depth": "environment.depth.belowTransducer",
+        "anchor.rode": "winches.windlass.rode",
+        "anchor.actions.up": "plugins.windlassctl.up",
+        "anchor.actions.down": "plugins.windlassctl.down",
+        "anchor.actions.reset": "plugins.windlassctl.reset",
+        "anchor.actions.release": "plugins.windlassctl.release",
         "anchor.actions.drop": "plugins.anchoralarm.dropAnchor",
         "anchor.actions.raise": "plugins.anchoralarm.raiseAnchor",
         "anchor.actions.radius": "plugins.anchoralarm.setRadius",
         "anchor.actions.rode": "plugins.anchoralarm.setRodeLength",
-        "anchor.actions.params": "plugins.anchoralarm.setManualAnchor",
+        "anchor.actions.set": "plugins.anchoralarm.setManualAnchor",
         "mob.startTime": "navigation.courseGreatCircle.activeRoute.startTime",
         "mob.bearing": "navigation.course.calcValues.bearingTrue",
         "mob.distance": "navigation.course.calcValues.distance",
