--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,10 +54,14 @@ set(LIBQTZEROCONF ${LIBQTZEROCONF})
 
 ExternalProject_Add(qhotkey
         GIT_REPOSITORY https://github.com/Skycoder42/QHotkey.git
-        CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTERNAL_INSTALL_LOCATION} -DQT_DEFAULT_MAJOR_VERSION=6
+        CMAKE_ARGS -DBUILD_SHARED_LIBS=on -DCMAKE_INSTALL_PREFIX=${EXTERNAL_INSTALL_LOCATION} -DQT_DEFAULT_MAJOR_VERSION=6
         TIMEOUT 360
 )
-set(LIBQHOTKEY ${EXTERNAL_INSTALL_LOCATION}/lib/libqhotkey.a)
+set(LIBQHOTKEY ${EXTERNAL_INSTALL_LOCATION}/lib/libqhotkey.so)
+if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+    set(LIBQHOTKEY ${EXTERNAL_INSTALL_LOCATION}/lib/libqhotkey.dylib)
+endif()
+set(LIBQHOTKEY ${LIBQHOTKEY})
 
 find_package(Qt6 COMPONENTS
         Core
