Updated to include PList sources in the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,8 @@ add_executable(${PROJECT_NAME}
         ui/bottombar/AnchorBar.cpp
         ui/bottombar/AnchorBar.hpp
         ui/bottombar/AnchorBar.ui
+        PList.cpp
+        PList.hpp
 
 )
 
