--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -19,9 +19,10 @@
         {
             "description": "Spotify web application",
             "fairwind": {
-                "active": true
+                "active": true,
+                "order": 990
             },
-            "name": "http://spotify.com",
+            "name": "https://spotify.com",
             "signalk": {
                 "appIcon": "file://icons/spotify_icon.png",
                 "displayName": "Spotify"
@@ -30,9 +31,10 @@
         {
             "description": "Netflix web application",
             "fairwind": {
-                "active": true
+                "active": true,
+                "order": 980
             },
-            "name": "http://netflix.com",
+            "name": "https://netflix.com",
             "signalk": {
                 "appIcon": "file://icons/netflix_icon.png",
                 "displayName": "Netflix"
@@ -41,9 +43,10 @@
         {
             "description": "Youtube web application",
             "fairwind": {
-                "active": true
+                "active": true,
+                "order": 970
             },
-            "name": "http://youtube.com",
+            "name": "https://youtube.com",
             "signalk": {
                 "appIcon": "file://icons/youtube_icon.png",
                 "displayName": "Youtube"
@@ -51,7 +54,7 @@
         }
     ],
     "connection": {
-        "server": "http://localhost:3000"
+        "server": ""
     },
     "signalk": {
         "btw": "navigation.course.calcValues.bearingTrue",
