--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -74,7 +74,7 @@
         "notifications.abandon": "notifications.abandon",
         "notifications.adrift": "notifications.adrift",
         "notifications.fire": "notifications.fire",
-        "notifications.mob": "notifications.mob",
+        "notifications.pob": "notifications.mob",
         "notifications.piracy": "notifications.piracy",
         "notifications.sinking": "notifications.sinking",
         "notifications.anchor": "notifications.anchor",
@@ -97,9 +97,9 @@
         "anchor.actions.radius": "plugins.anchoralarm.setRadius",
         "anchor.actions.rode": "plugins.anchoralarm.setRodeLength",
         "anchor.actions.set": "plugins.anchoralarm.setManualAnchor",
-        "mob.startTime": "navigation.courseGreatCircle.activeRoute.startTime",
-        "mob.bearing": "navigation.course.calcValues.bearingTrue",
-        "mob.distance": "navigation.course.calcValues.distance",
+        "pob.startTime": "navigation.courseGreatCircle.activeRoute.startTime",
+        "pob.bearing": "navigation.course.calcValues.bearingTrue",
+        "pob.distance": "navigation.course.calcValues.distance",
         "autopilot.state": "steering.autopilot.state",
         "autopilot.mode": "steering.autopilot.mode",
         "autopilot.target.heading": "steering.autopilot.target.headingMagnetic",
