Moved from MOB to POB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,9 +117,9 @@ add_executable(${PROJECT_NAME}
         ui/settings/SignalK.ui
         Configuration.cpp
         Configuration.hpp
-        ui/bottombar/MOBBar.cpp
-        ui/bottombar/MOBBar.hpp
-        ui/bottombar/MOBBar.ui
+        ui/bottombar/POBBar.cpp
+        ui/bottombar/POBBar.hpp
+        ui/bottombar/POBBar.ui
         ui/bottombar/AlarmsBar.cpp
         ui/bottombar/AlarmsBar.hpp
         ui/bottombar/AlarmsBar.ui
