Fix name typos for NavPage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,8 +148,8 @@ add_executable(${PROJECT_NAME}
         ui/mydata/Files.ui
         ui/mydata/FileInfoListModel.cpp
         ui/mydata/FileInfoListModel.hpp
-        ui/mydata/Navpage.cpp
-        ui/mydata/Navpage.hpp
+        ui/mydata/NavPage.cpp
+        ui/mydata/NavPage.hpp
         ui/mydata/NavPage.ui
         ui/mydata/DriveInfo.cpp
         ui/mydata/DriveInfo.hpp
