Added FullScreen and windowed settings with default sze

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -1,7 +1,10 @@
 {
     "main": {
         "virtualKeyboard": false,
-        "autopilot": ""
+        "autopilot": "",
+        "fullScreen": true,
+        "windowWidth": 1280,
+        "windowHeight": 720
     },
     "apps": [
         {
