--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,7 @@ add_executable(${PROJECT_NAME}
         ui/mydata/ImageViewer.ui
         ui/mydata/ImageWidget.cpp
         ui/mydata/ImageWidget.hpp
+        ui/mydata/TextViewer.cpp
         ui/mydata/TextViewer.hpp
         ui/mydata/TextViewer.ui
         ui/mydata/JsonTreeItem.cpp
