Re-added virtual keyboard configuration

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -1,5 +1,6 @@
 {
     "main": {
+        "virtualKeyboard": false,
         "autopilot": "",
         "fullScreen": true,
         "windowWidth": 1024,
