Changed FullScreen in a modre generic Window Mode (0: windowed, 1:maximized, 2:full screen)

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -2,7 +2,7 @@
     "main": {
         "virtualKeyboard": false,
         "autopilot": "",
-        "fullScreen": true,
+        "mode": 0,
         "windowWidth": 1024,
         "windowHeight": 600,
         "windowTop": 20,
