Changed mode to windowMode. The new json value is a string

--- a/resources/json/configuration.json
+++ b/resources/json/configuration.json
@@ -2,7 +2,7 @@
     "main": {
         "virtualKeyboard": false,
         "autopilot": "",
-        "mode": 0,
+        "windowMode": "windowed",
         "windowWidth": 1024,
         "windowHeight": 600,
         "windowTop": 20,
